--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
-    "body": "^5.1.0",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
     "nodemailer": "^7.0.5",
-    "parser": "^0.1.4",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   },
